# Ask_Vitex

./: .gitignore  README.md  admin_app.py  main.py  pyproject.toml  scheduler_worker.py
data/: Vitex.docx
src/: ingestion.py  message.py  rag_engine.py
test/: test_demo.py  test_invoke.py  test_msg.py  test_send.py
